# WsprEncodedPython

./: .gitignore  CMakeLists.txt  README.md  WsprEncodedPython.cpp  act.sh  build.sh  configure.sh  install.sh  test_wspr_basic_roundtrip.py  test_wspr_decode.py  test_wspr_decode_basic.py  test_wspr_decode_common.py  test_wspr_encode.py  test_wspr_encode_basic.py
.github/workflows/: build-and-deploy.yml
prebuilt/WsprEncodedPython-windows-latest-gcc_mingw/: WsprEncodedPython.cp39-win_amd64.pyd
prebuilt/WsprEncodedPython-windows-latest-msvc/: WsprEncodedPython.cp39-win_amd64.pyd
prebuilt/WsprEncodedPython-windows-latest-msvc32/: WsprEncodedPython.cp39-win_amd64.pyd
prebuilt/WsprEncodedPython-windows-latest-msvc64/: WsprEncodedPython.cp39-win_amd64.pyd
